[gd_scene load_steps=3 format=3 uid="uid://lmpdatskd40f"]

[ext_resource type="Script" path="res://Scripts/drawing_minigame.gd" id="1_dunno"]
[ext_resource type="Texture2D" uid="uid://cciihaqp8e3md" path="res://Resources/Gemini_Generated_Cloud_9zqp789zqp789zqp.png" id="2_rwrkp"]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 99
script = ExtResource("1_dunno")

[node name="GamePanel" type="Panel" parent="."]
z_index = 1
custom_minimum_size = Vector2(450, 120)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 40.0
offset_right = 225.0
offset_bottom = 160.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="GamePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -38.5
offset_right = 74.0
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GamePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TitleLabel" type="Label" parent="GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "จินตนาการ"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="StrokeCountLabel" type="Label" parent="GamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackgroundTexture" type="TextureRect" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 234.0
offset_top = 180.0
offset_right = 234.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_rwrkp")
expand_mode = 1

[node name="DrawingArea" type="Control" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -275.0
offset_right = 400.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="DrawingCanvas" type="Node2D" parent="Panel"]
position = Vector2(320, 68)
